# jb-filetools

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  install.sh  pyproject.toml  requirements.txt  ruff.toml  settings.json  setup.py  shows_map.ini  tox.ini  uninstall.sh  update.sh
.github/workflows/: ci.yml  release.yml
deployment/: app-install.sh  env.lxc  lxc-create.sh  lxc-deploy.sh  lxc-destroy.sh
deployment/.depricated/: destroy.sh  env.lxc  install.sh  lxc-deploy.sh
deployment/lxc/: create.sh  destroy.sh  env-template  update.sh
deployment/proxmox-lxc/: .env  create_lxc_container.sh  destroy.sh  install.sh  update.sh
filetools/: __init__.py  _scratch.py  cli.py  logger.py  moving_files.py  naming_files.py  questions.py  settings.py  utils.py
filetools/_redundant/: args.py  old_naming_files.py
scripts/: add_to_dir.py  bump_patch.py  check_version.py  clean_filename.py  convertDirectory_divix_to_mp4.py  convertDirectory_m4a_to_mp3.py  convertFiles_divx_to_mp4.py  convertFiles_m4a_to_mp3.py  extract_file.py  rename_episodes.py
src/file_tools/: clean_filename.py  extract_file.py  series_rename.py
src/filetools/: __init__.py  _scratch.py  args.py  cli.py  config.ini  const.py  constants.py  logging.py  main.py  moving_files.py  naming_files.py  questions.py  settings.py  shows_map.ini  utils.py
src/filetools/_redundant/: old_code.py
src/filetools/filetools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/filetools/modules/: args.py  const.py  moving_files.py  naming_files.py  questions.py  utils.py
src/filetools/modules/_testing/: test.py
src/filetools/modules/data/: find_episode_info.py
src/filetools/modules/moving/: add_to_dir.py  clean_empy_directories.py  extract_file.py
src/filetools/modules/naming/: clean_filename.py  rename_episodes.py  rename_season.py
src/filetools/utils/_testing/: test.py
src/filetools/utils/moving/: clean_empy_directories.py
tests/: conftest.py  test_moving.py  test_naming.py  test_questions.py  test_settings.py  test_utils.py
