[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[project]
name = "filetools"
version = "1.0.0" # Placeholder or dynamic versioning
authors = [{ name = "James Berkheimer", email = "james.berkheimer@gmail.com" }]
description = "A set of tools to help parse downloaded media files"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = ["click>=8.1.3", "colorlog>=6.4.1"]

[project.scripts]
filetools = "filetools.cli:main"
[tool.hatch.build]
targets = { wheel = {} }

[tool.hatch.envs.dev.scripts]
test = "coverage run -m pytest && coverage report"
test1 = "python -m filetools._scratch test1"
test2 = "python -m filetools._scratch test2"
test3 = "python -m filetools._scratch test3"
test4 = "python -m filetools._scratch test4"

[project.optional-dependencies]
dev = [
    "ruff>=0.0.282",
    "tox>=4.0",
    "build>=1.0",
    "pytest>=7.0",
    "coverage>=6.0",
    "hatchling>=1.0",
    "python-dotenv>=0.19",
    "toml>=0.10.2",
]

[tool.hatch.version]
path = "VERSION"

[tool.coverage.run]
source = ["filetools"]
branch = true

[tool.coverage.report]
fail_under = 40
show_missing = true
