[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[project]
name = "filetools"
dynamic = ["version"]
authors = [{ name = "James Berkheimer", email = "james.berkheimer@gmail.com" }]
description = "A set of tools to help parse downloaded media files"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["click>=8.1.3", "colorlog>=6.4.1"]

[project.scripts]
filetools = "filetools.cli:main"
t1 = "filetools._scratch:test1"

[project.optional-dependencies]
dev = [
    "ruff>=0.0.282",
    "tox>=4.0",
    "build>=1.0",
    "pytest>=7.0",
    "coverage>=6.0",
    "hatchling>=1.0",
    "python-dotenv>=0.19",
    "toml>=0.10.2",
]

[tool.hatch.build]
[tool.hatch.build.targets.wheel]
include = ["settings.json", "uninstall.sh", "update.sh", "filetools"]

[tool.hatch.version]
path = "VERSION"
pattern = "^(?P<version>.+)$"


[tool.coverage.run]
source = ["filetools"]
branch = true

[tool.coverage.report]
fail_under = 40
show_missing = true
